--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -13,6 +13,7 @@ okHttpVersion = "4.12.0"
 scarletVersion = "0.1.12"
 hiltVersion = "2.51.1"
 hiltNavigationVersion = "1.2.0"
+splashVersion = "1.0.1"
 
 [libraries]
 
@@ -43,6 +44,9 @@ scarlet = { group = "com.tinder.scarlet", name = "scarlet", version.ref = "scarl
 hilt-android = { group = "com.google.dagger", name = "hilt-android", version.ref = "hiltVersion" }
 hilt-navigation = { group = "androidx.hilt", name = "hilt-navigation-compose", version.ref = "hiltNavigationVersion" }
 hilt-compiler = { group = "com.google.dagger", name = "hilt-android-compiler", version.ref = "hiltVersion" }
+
+# SPLASH
+splash = { group = "androidx.core", name = "core-splashscreen", version.ref= "splashVersion" }
 
 # UNIT TEST
 junit = { group = "org.junit.jupiter", name = "junit-jupiter-engine", version.ref = "junit" }
