initial setup alpaca API

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -38,7 +38,10 @@ okhttp-core = { group = "com.squareup.okhttp3", name = "okhttp", version.ref = "
 okhttp-interceptor = { group = "com.squareup.okhttp3", name = "logging-interceptor", version.ref = "okHttpVersion" }
 
 # SCARLET
-scarlet = { group = "com.tinder.scarlet", name = "scarlet", version.ref = "scarletVersion" }
+scarlet-core = { group = "com.tinder.scarlet", name = "scarlet", version.ref = "scarletVersion" }
+scarlet-stream = { group = "com.tinder.scarlet", name = "stream-adapter-coroutines", version.ref = "scarletVersion" }
+scarlet-gson = { group = "com.tinder.scarlet", name = "message-adapter-gson", version.ref = "scarletVersion" }
+scarlet-okhttp = { group = "com.tinder.scarlet", name = "websocket-okhttp", version.ref = "scarletVersion" }
 
 # DAGGER HILT
 hilt-android = { group = "com.google.dagger", name = "hilt-android", version.ref = "hiltVersion" }
