--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -7,13 +7,15 @@ junitVersion = "1.1.5"
 espressoCore = "3.5.1"
 lifecycleRuntimeKtx = "2.7.0"
 activityCompose = "1.8.2"
-composeBom = "2024.03.00"
+composeBom = "2024.04.00"
 retrofitVersion = "2.11.0"
 okHttpVersion = "4.12.0"
 scarletVersion = "0.1.12"
 hiltVersion = "2.51.1"
 hiltNavigationVersion = "1.2.0"
 splashVersion = "1.0.1"
+jsonVersion = "1.6.0"
+jsonPluginVersion = "1.9.23"
 
 [libraries]
 
@@ -33,6 +35,10 @@ androidx-compose-bom = { group = "androidx.compose", name = "compose-bom", versi
 retrofit-core = { group = "com.squareup.retrofit2", name = "retrofit", version.ref = "retrofitVersion" }
 retrofit-gson = { group = "com.squareup.retrofit2", name = "converter-gson", version.ref = "retrofitVersion" }
 
+# JSON
+json = { group = "org.jetbrains.kotlinx", name = "kotlinx-serialization-json", version.ref = "jsonVersion" }
+
+
 # OkHTTP
 okhttp-core = { group = "com.squareup.okhttp3", name = "okhttp", version.ref = "okHttpVersion" }
 okhttp-interceptor = { group = "com.squareup.okhttp3", name = "logging-interceptor", version.ref = "okHttpVersion" }
@@ -41,12 +47,14 @@ okhttp-interceptor = { group = "com.squareup.okhttp3", name = "logging-intercept
 scarlet-core = { group = "com.tinder.scarlet", name = "scarlet", version.ref = "scarletVersion" }
 scarlet-stream = { group = "com.tinder.scarlet", name = "stream-adapter-coroutines", version.ref = "scarletVersion" }
 scarlet-gson = { group = "com.tinder.scarlet", name = "message-adapter-gson", version.ref = "scarletVersion" }
+scarlet-moshi = { group = "com.tinder.scarlet", name="message-adapter-moshi", version.ref = "scarletVersion" }
 scarlet-okhttp = { group = "com.tinder.scarlet", name = "websocket-okhttp", version.ref = "scarletVersion" }
+scarlet-lifecycle = { group = "com.tinder.scarlet", name = "lifecycle-android", version.ref = "scarletVersion" }
 
 # DAGGER HILT
 hilt-android = { group = "com.google.dagger", name = "hilt-android", version.ref = "hiltVersion" }
 hilt-navigation = { group = "androidx.hilt", name = "hilt-navigation-compose", version.ref = "hiltNavigationVersion" }
-hilt-compiler = { group = "com.google.dagger", name = "hilt-android-compiler", version.ref = "hiltVersion" }
+hilt-compiler = { group = "com.google.dagger", name = "hilt-compiler", version.ref = "hiltVersion" }
 
 # SPLASH
 splash = { group = "androidx.core", name = "core-splashscreen", version.ref= "splashVersion" }
@@ -68,4 +76,6 @@ androidx-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-man
 androidApplication = { id = "com.android.application", version.ref = "agp" }
 jetbrainsKotlinAndroid = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 hiltAndroid = { id = "com.google.dagger.hilt.android", version.ref = "hiltVersion" }
+jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin"}
+jsonSerialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin"}
 
