--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -19,6 +19,7 @@ junit4 = "4.13.2"
 mockkVersion = "1.13.10"
 coroutineVersion = "1.8.0"
 assertkVersion = "0.28.0"
+fakerVersion = "1.0.2"
 
 [libraries]
 
@@ -60,11 +61,14 @@ hilt-navigation = { group = "androidx.hilt", name = "hilt-navigation-compose", v
 hilt-compiler = { group = "com.google.dagger", name = "hilt-compiler", version.ref = "hiltVersion" }
 
 # SPLASH
-splash = { group = "androidx.core", name = "core-splashscreen", version.ref= "splashVersion" }
+splash = { group = "androidx.core", name = "core-splashscreen", version.ref = "splashVersion" }
 
 # UNIT TEST
 junit = { group = "junit", name = "junit", version.ref = "junit4" }
 coroutine-test = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-test", version.ref = "coroutineVersion" }
+
+# FAKER
+faker = { group = "com.github.javafaker", name = "javafaker", version.ref = "fakerVersion"}
 
 # ASSERTK
 assertk = { group = "com.willowtreeapps.assertk", name = "assertk", version.ref = "assertkVersion"}
