- real time news - refactor news repository and news remote source

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -21,6 +21,7 @@ coroutineVersion = "1.8.0"
 assertkVersion = "0.28.0"
 fakerVersion = "1.0.2"
 coilVersion = "2.6.0"
+pagingVersion = "3.2.1"
 
 [libraries]
 
@@ -64,6 +65,10 @@ hilt-compiler = { group = "com.google.dagger", name = "hilt-compiler", version.r
 
 # SPLASH
 splash = { group = "androidx.core", name = "core-splashscreen", version.ref = "splashVersion" }
+
+# PAGING
+paging-runtime = { group = "androidx.paging", name = "paging-runtime", version.ref = "pagingVersion" }
+paging-compose = { group = "androidx.paging", name = "paging-compose", version.ref = "pagingVersion" }
 
 # COIL
 coil = { group = "io.coil-kt", name = "coil-compose", version.ref = "coilVersion" }
